--- a/tasks/home-assistant.yml
+++ b/tasks/home-assistant.yml
@@ -12,7 +12,7 @@
     dest: "{{ config_dir }}/home-assistant/docker-compose.yml"
     mode: '0640'
   become: false
-  notify: Restart pi-hole
+  notify: Restart Home Assistant
 
 # TODO: The first time this playbook is run, the `pi` user may not be added
 # to the `docker` group, so this task may fail.
