--- a/example.config.yml
+++ b/example.config.yml
@@ -10,6 +10,7 @@ pihole_password: "change-this-password"
 pihole_dnssec: true
 pihole_rev_server: true
 pihole_rev_server_target: "192.168.1.1"
+pihole_rev_server_cidr: "192.168.1.0/24"
 pihole_rev_server_domain: "lan"
 
 # Internet monitoring configuration.
